[FIX]back2basics: Fix some bugs as listed below
This commit fixes some minor bugs
1. Fixed no horizontal scrollbar on The generate leads popup.
2. Activities list: reorder of columns on CRM module and hide the assigned partner column.
3. The user now has the ablity to keep a lead unassigned by default (after discussion with TDE, we concluded that the lead shall not be assigned randomly
4. Currency is showing now in the Sales Teams kanban view but only in a multi-company enviroment, as it is using the default company currency when there is only one company in the instance.
----------------------

P.S: I removed team_id and user_id assertions in the tests as the lead are now by default w/o any sales person.

----------------------

Task: #2314894

--- a/addons/web/static/src/scss/form_view.scss
+++ b/addons/web/static/src/scss/form_view.scss
@@ -164,6 +164,7 @@
 
     // Statusbar
     .o_form_statusbar {
+        width: 100%;
         position: relative; // Needed for the "More" dropdown
         display: flex;
         justify-content: space-between;
